# google-scholar-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.multistage  README.md  docker-compose.yml  index.js  package.json  pyproject.toml
.github/workflows/: test.yml
src/: __init__.py  config.py  main.py
src/clients/: core_api.py  serpapi.py
src/models/: scholar.py
src/tools/: __init__.py  fulltext.py  scholar.py
tests/: __init__.py
