[project]
name = "google-scholar-mcp"
version = "2.0.0"
description = "MCP server for Google Scholar search with full-text access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
google-scholar-mcp = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
